<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 Alwin Ibba
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview_dialog_settings_input"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/linearlayout_dialog_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/linearlayout_dialog_password_input_padding"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearlayout_dialog_password_input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/linearlayout_dialog_password_input_title_margin_left"
            android:layout_marginTop="@dimen/linearlayout_dialog_password_input_title_margin_top"
            android:layout_marginBottom="@dimen/linearlayout_dialog_password_input_title_margin_bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_dialog_password_input_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/label_dialog_password_input_title" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_dialog_password_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/linearlayout_dialog_password_input_password_margin_left"
            android:layout_marginEnd="@dimen/linearlayout_dialog_password_input_password_margin_end"
            android:layout_marginTop="@dimen/linearlayout_dialog_password_input_password_margin_top"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edittext_dialog_password_input_password"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/edittext_dialog_password_input_password_padding_end"
                android:minWidth="@dimen/edittext_dialog_password_input_password_min_width"
                android:drawablePadding="@dimen/edittext_dialog_password_input_password_drawable_padding"
                android:importantForAutofill="no"
                android:longClickable="false"
                android:textIsSelectable="false"
                android:inputType="textPassword|textNoSuggestions"
                android:hint="@string/label_dialog_password_input_password"
                android:textColorHint="@color/textColorHint"
                android:drawableTint="@color/textColorPrimary"
                android:drawableEnd="@drawable/ic_visibility_off"
                tools:ignore="RtlSymmetry,UnusedAttribute" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_dialog_password_input_ok_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/linearlayout_dialog_password_input_ok_cancel_padding_top"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_dialog_password_input_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_password_input_ok"
                app:srcCompat="@drawable/icon_ok_selector" />

            <ImageView
                android:id="@+id/imageview_dialog_password_input_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_password_input_cancel"
                app:srcCompat="@drawable/icon_cancel_selector" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
